--- a/index.html
+++ b/index.html
@@ -4,6 +4,43 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <head>
+      <link
+        rel="preload"
+        as="font"
+        type="font/woff2"
+        href="/National-Black.woff2"
+        crossorigin="anonymous"
+      />
+      <link
+        rel="preload"
+        as="font"
+        type="font/woff2"
+        href="/National-Book.woff2"
+        crossorigin="anonymous"
+      />
+      <link
+        rel="preload"
+        as="font"
+        type="font/woff2"
+        href="/National-Bold.woff2"
+        crossorigin="anonymous"
+      />
+      <link
+        rel="preload"
+        as="font"
+        type="font/woff2"
+        href="/National-Medium.woff2"
+        crossorigin="anonymous"
+      />
+      <link
+        rel="preload"
+        as="font"
+        type="font/woff2"
+        href="/National-Semibold.woff2"
+        crossorigin="anonymous"
+      />
+    </head>
     <title>Vite App</title>
   </head>
   <body>
