--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <head>
-      <link
+      <!-- <link
         rel="preload"
         as="font"
         type="font/woff2"
@@ -39,7 +39,7 @@
         type="font/woff2"
         href="/National-Semibold.woff2"
         crossorigin="anonymous"
-      />
+      /> -->
     </head>
     <title>Vite App</title>
   </head>
